# router_client

./: CMakeLists.txt
inc/: router_client_api.h  service_def.h
lib/: router_client_d.lib
src/: router_client_api.cpp
